[package]
name = "ftp_cli"
version = "0.1.0"
authors = ["benjaminbours <benjamin.bours@keemotion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
ansi_term = "0.12.1"
clap = "2.33.0"
printer = { path = "../printer" }